k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oci-web-app
  template:
    metadata:
      labels:
        app: oci-web-app
      annotations:
        # Crucial for the Velero Node-Agent (Restic) to find your data
        backup.velero.io/backup-volumes: persistent-storage-volume
    spec:
      containers:
      - name: web-app
        image: docker.io/wakeel532687/oci-web-app:e57cb57f5863f008aa338accee8f68e6378a06a0
        ports:
        - containerPort: 5000 # Moved under container
        volumeMounts:
        - name: persistent-storage-volume
          mountPath: /app/data 
      volumes:
      - name: persistent-storage-volume
        persistentVolumeClaim:
          claimName: app1-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: oci-web-service
  annotations:
    # This correctly points to your Riyadh public subnet for the LB
    service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.me-riyadh-1.aaaaaaaaypjbhxx5cqmajclwiw542iswkhmhnq4krzylvcv2uk4t5r3parda"
spec:
  type: ClusterIP # Change to LoadBalancer if you want an external IP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: oci-web-app
